# PerfSun

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
perfsun/: __init__.py  __main__.py  cli.py
perfsun/collectors/: __init__.py  android.py  base.py  ios.py  windows.py
perfsun/core/: __init__.py  alert_manager.py  collector_manager.py  data_exporter.py  data_point.py  data_recorder.py
perfsun/gui/: __init__.py  charts.py  components.py  main_window.py  main_window_tk.py  theme.py
perfsun/templates/: report.html
perfsun/utils/: __init__.py  adb.py  frame_smoother.py  jank_detector.py  power_estimator.py
tests/: __init__.py  test_alert_manager.py  test_data_exporter.py  test_data_recorder.py  test_frame_smoother.py  test_jank_detector.py  test_power_estimator.py
